--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <body>
 
-<h2>JavaScript Validation</h2>
+<h2>Cálculo de Concentração de Soluções</h2>
 
-<p>Please input a number between 1 and 10:</p>
-
-<input id="numb">
+<p>Digite a concentração prescrita:</p>
+<input id="CP">
 
 <button type="button" onclick="myFunction()">Submit</button>
 
@@ -15,11 +14,11 @@
 <script>
 function myFunction() {
   // Get the value of the input field with id="numb"
-  let x = document.getElementById("numb").value;
-  // If x is Not a Number or less than one or greater than 10
+  let CP = document.getElementById("CP").value;
   let text;
-  if (isNaN(x) || x < 1 || x > 10) {
-    text = "Input not valid";
+  
+  if (isNaN(CP)) {
+    text = "Entrada invalida";
   } else {
     text = "Input OK";
   }
