--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Digite o volume por âmpola: <input id="volume"><br>
 
 <p id="linha1"></p>
 <p id="linha2"></p>
+<p id="linha3"></p>
 
 <script>
 function CalculaV1(cf, vf, c1, c2){ 
@@ -43,11 +44,13 @@ function conc() {
      let V1 = CalculaV1(CP, VP, C1, C2);
      let V2 = CalculaV2(CP, VP, C1, C2);
      let quantidade = V2/volume;
-     var text1 = "Volume 1:"+V1+"  Volume 2:"+V2 ;
-     var text2 = "A quantidade necessária de ampolas é: "+ quantidade;
+     var text1 = "Volume 1:"+V1;
+     var text2 =" Volume 2:"+V2;
+     var text3 = "A quantidade necessária de ampolas é: "+ quantidade;
   }
   document.getElementById("linha1").innerHTML = text1;
-  document.getElementById("linha2").innerHTML = text2;
+  document.getElementById("linha2").innerHTML = text1;
+  document.getElementById("linha3").innerHTML = text2;
 }
 </script>
 
