--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ function conc() {
      let V1 = CalculaV1(CP, VP, C1, C2);
      let V2 = CalculaV2(CP, VP, C1, C2);
      let quantidade = V2/volume;
-     var text1 = "Volume 1:"+V1;
-     var text2 =" Volume 2:"+V2;
-     var text3 = "A quantidade necessária de ampolas é: "+ quantidade;
+     var text1 = "Volume 1:"+V1.toFixed(3);
+     var text2 =" Volume 2:"+V2.toFixed(3);
+     var text3 = "A quantidade necessária de ampolas é: "+ quantidadeto.Fixed(3);
   }
   document.getElementById("linha1").innerHTML = text1;
   document.getElementById("linha2").innerHTML = text1;
