--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function conc() {
      let quantidade = V2/volume;
      var text1 = "Volume 1:"+V1.toFixed(3);
      var text2 =" Volume 2:"+V2.toFixed(3);
-     var text3 = "A quantidade necessária de ampolas é: "+ quantidadeto.Fixed(3);
+     var text3 = "A quantidade necessária de ampolas é: "+ quantidade.toFixed(3);
   }
   document.getElementById("linha1").innerHTML = text1;
   document.getElementById("linha2").innerHTML = text1;
