--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Digite a concentração existente da solução menos concentrada: <input id="C1"
 Digite a concentração existente da solução mais concentrada: <input id="C2"><br>
 Digite o volume por âmpola: <input id="volume"><br>
   
-<button type="button" onclick="conc()">Submit</button>
+<button type="button" onclick="conc()">Calcula Concentração</button>
 
 <p id="linha1"></p>
 <p id="linha2"></p>
@@ -44,7 +44,7 @@ function conc() {
      let V1 = CalculaV1(CP, VP, C1, C2);
      let V2 = CalculaV2(CP, VP, C1, C2);
      let quantidade = V2/VOL;
-     var text1 = "Volume 1:<b> "+V1.toLocaleString('pt-BR').toFixed(2)+"</b>";
+     var text1 = "Volume 1:<b> "+V1.toFixed(2)+"</b>";
      var text2 =" Volume 2:<b> "+V2.toFixed(2)+"</b>";
      var text3 = "A quantidade necessária de ampolas é: <b>"+ quantidade.toFixed(2)+"</b>";
   }
