--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <style>
-  h1 {
+  h2 {
     color: blue;
     font-family: verdana;
-    font-size: 300%;
+    font-size: 200%;
   }
   p {
     color: red;
-    font-family: courier;
+    font-family: verdana;
     font-size: 160%;
   }
   .button {
